# eyeanimation

./: .gitignore  DEVLOG.md  README.md
.devcontainer/: Dockerfile  Makefile
assets/: process_sprites.py  split_sprites.py
playpng/: Cargo.toml
playpng/src/: main.rs
rn_debug/: Cargo.toml  assets
rn_debug/src/: main.rs
runanimation/: Cargo.toml
runanimation/src/: main.rs
