[package]
name = "playpng"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3